fix(AdjustToneButton.jsx): add z-index to adjust tone button for proper layering fix(TextChat.jsx): change onClick function to use arrow function to avoid immediate execution fix(mobile.css): update z-index for nav and nav-mask for proper layering chore(package.json): rename update:branch script to reinstall for clarity and consistency

--- a/client/src/mobile.css
+++ b/client/src/mobile.css
@@ -9,7 +9,7 @@
 
 .nav {
   position: fixed;
-  z-index: 40;
+  z-index: 64;
   top: 0;
 
   /* max-width: 260px; */
@@ -36,7 +36,7 @@
   }
   .nav-mask {
     position: fixed;
-    z-index: 35;
+    z-index: 63;
     left: 0;
     right: 0;
     top: 0;
